--- a/package.json
+++ b/package.json
@@ -9,22 +9,30 @@
     "build": "bun run build.ts"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "bun-plugin-tailwind": "^0.1.2",
+    "bun-react-template": ".",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.3.1",
     "elysia": "^1.4.25",
     "lucide-react": "^0.545.0",
+    "pg": "^8.18.0",
     "react": "^19",
     "react-dom": "^19",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@types/bun": "latest",
+    "@types/node": "^25.2.3",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bun": "latest",
+    "prisma": "^7.4.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.4.0"
   }
