--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.18.0",
     "react": "^19",
     "react-dom": "^19",
+    "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
