Adding bun port mounting environment variables reference

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="postgres://postgres:ThisIsDevelopment77@localhost:4321/process_management"
+
+# OPTIONAL
+# Specify the port for the Bun server. $BUN_PORT, $PORT, $NODE_PORT otherwise 3000 will be used.
+BUN_PORT=3030
