--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "dotenv": "^17.3.1",
     "elysia": "^1.4.25",
     "lucide-react": "^0.545.0",
+    "next-themes": "^0.4.6",
     "pg": "^8.18.0",
+    "radix-ui": "^1.4.3",
     "react": "^19",
     "react-dom": "^19",
     "react-router-dom": "^7.13.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
